Hadoop demo